<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimary"
    android:overScrollMode="always"
    android:scrollbars="vertical">

    <ImageView
        android:id="@+id/signup_img"
        android:layout_width="110dp"
        android:layout_height="117dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/this_is_person_icon"
        android:src="@drawable/user_profile"
        app:layout_constraintBottom_toTopOf="@+id/info_tv_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_tv_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textColor="@color/ColorAccent"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_img" />

    <EditText
        android:id="@+id/signup_fullname_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/ColorAccent"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textColor="@color/ColorAccent"
        android:textColorHint="@color/ColorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_tv_1" />

    <EditText
        android:id="@+id/signup_email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/ColorAccent"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/ColorAccent"
        android:textColorHint="@color/ColorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_fullname_et" />

    <EditText
        android:id="@+id/signup_phone_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/ColorAccent"
        android:ems="10"
        android:hint="Phone"
        android:inputType="phone"
        android:textColor="@color/ColorAccent"
        android:textColorHint="@color/ColorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_et" />

    <EditText
        android:id="@+id/signup_age_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/ColorAccent"
        android:ems="10"
        android:hint="Age"
        android:inputType="numberSigned"
        android:textColor="@color/ColorAccent"
        android:textColorHint="@color/ColorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_phone_et" />

    <EditText
        android:id="@+id/signup_create_pass_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/ColorAccent"
        android:ems="10"
        android:hint="Create a password"
        android:inputType="textPassword"
        android:textColor="@color/ColorAccent"
        android:textColorHint="@color/ColorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_age_et" />

    <EditText
        android:id="@+id/signup_retype_pass_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/ColorAccent"
        android:ems="10"
        android:hint="Re-Type your password"
        android:inputType="textPassword"
        android:textColor="@color/ColorAccent"
        android:textColorHint="@color/ColorTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_create_pass_et" />

    <Switch
        android:id="@+id/signup_scn_show_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="222dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="Show pasword"
        android:textColor="@color/ColorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_retype_pass_et"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/signup_scn_sbm_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/ColorAccent"
        android:text="SIGN UP"
        android:textColor="@color/ColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_scn_show_pass" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_scn_sbm_btn">

        <TextView
            android:id="@+id/info_tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/if_you_have_already_an_account"
            android:textAlignment="center"
            android:textColor="@color/ColorAccent"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signup_scn_signin_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SIGN IN"
            android:textColor="@color/ColorAccent"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>